--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,16 +34,18 @@ task clearJar(type: Delete) {
     delete 'build/libs/CardEncryptionLib.jar'
 }
 
-task addReadMe(type: Copy) {
+build {
+  doFirst {
+   copy {
      from('README.md')
      into('build/intermediates/classes/release/META-INF/')
+    }
+  }
 }
 
-task makeJar(type: Copy) {
-    from('build/intermediates/bundles/default/')
-    into('build/libs/')
-    include('classes.jar')
-    rename ('classes.jar', 'CardEncryptionLib.jar')
+task makeJar(type: Jar) {
+      from('build/intermediates/classes/release/')
+      archiveName 'CardEncryptionLib.jar'
 }
 
-makeJar.dependsOn(clearJar,addReadMe, build)
+makeJar.dependsOn(clearJar,build)
