--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aol.obi.android.lib.one">
+    package="com.aol.obi.android.lib">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
